# bowling

./: .gitignore  CMakeLists.txt  README.md
includes/: game.h
sources/: game.cpp
tests/: test_game.cpp
